Update UI translations

--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_ca.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_ca.arb
@@ -102,5 +102,5 @@
   "settingsPageSubtitle5": "Proveïdors del servei",
   "settingsPageShareButtonText": "Compartir",
   "settingsPagePrivacyPolicy": "Política de Privacitat",
-  "settingsPageShareText": "If this cute pigeon can't help you vote in June, nothing will. I've used the app and you should too:"
+  "settingsPageShareText": "Si aquest colom tan bufó no t'ajuda a votar al juny, res no ho farà. Jo ja he fet servir l'app, fes-ho tu també:"
 }
