--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_nl.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_nl.arb
@@ -38,7 +38,7 @@
   "onBoardingStep3Title": "Ik identificeer als",
   "onBoardingStep3Option1": "Vrouw",
   "onBoardingStep3Option2": "Man",
-  "onBoardingStep3Option3": "Gendervloeiend",
+  "onBoardingStep3Option3": "Genderfluïde",
   "onBoardingStep3Option4": "Non-binair",
   "onBoardingStep3Option5": "Anders",
   "onBoardingNotAnswerButton": "Zeg ik liever niet",
@@ -71,7 +71,7 @@
   "resultsPage7Title": "De kandidaten in {country} die het meest overeenkomen met {group}",
   "resultsPage7Disclaimer": "In willekeurige volgorde.",
   "resultsPage7NoLocalCandidates": "Geen nationale partijen gevonden in {country}",
-  "resultsPage8_1Text": "In het geval van {topic}, sta je {percentage} dichterbij",
+  "resultsPage8_1Text": "In het geval van {topic}, sta je {percentage}% dichterbij",
   "resultsPage8_2Text": "Actieve Klimaatactie",
   "resultsPage8Help": "Jij bent een strijder tegen klimaatverandering! Jij gelooft dat het aanpakken van de klimaatcrisis gemeenschappelijke actie vereist, waarbij iedereen het een topprioriteit maakt. Jij hebt er geen probleem dat de EU hiervoor bedrijven reguleert. Wat is ook het nut van economische groei als de planeet onbewoonbaar wordt?",
   "resultsPage9Help": "Klik op de kaarten om ze te schudden",
