--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_pt-PT.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_pt-PT.arb
@@ -9,18 +9,18 @@
   "textContinue": "Continuar",
   "alertServerErrorTitle": "Ops!",
   "alertServerErrorText": "Algo deu errado no nosso lado. Por favor, tente novamente mais tarde.",
-  "skip": "Pular",
+  "skip": "Saltar",
   "neutral": "Neutro",
   "faq": "Perguntas frequentes",
   "@@SplashPage": "SplashPage",
-  "splashPageNoInternet": "Parece que você não está conectado à internet",
+  "splashPageNoInternet": "Parece que não estás conectado à internet",
   "@@LanguagePage": "LanguagePage",
-  "languagePageTitle": "Vamos continuar em português? :)",
+  "languagePageTitle": "Vamos continuar em Português? :)",
   "languagePageSubtitle": "Isto pode ser alterado posteriormente nas configurações.",
   "@@Entrance": "EntrancePage",
-  "entranceTitle1": "Se esse pombinho fofo não puder ajudá-lo a votar  em junho, nada irá.",
-  "entranceTitle2": "Deslize a sua opinião sobre temas que são importantes para você.",
-  "entranceTitle3": "Descubra o seu match e uma orientação para quem votar nas eleições.",
+  "entranceTitle1": "Se este pombinho fofo não puder ajudar-te a votar  em junho, nada poderá.",
+  "entranceTitle2": "Desliza a tua opinião sobre temas que são importantes para ti.",
+  "entranceTitle3": "Descobre o teu match e uma orientação em quem votar nestas eleições.",
   "entranceMatchesFoundQuote": "{count} matches encontrados nas últimas 24h",
   "entranceStartButton": "Iniciar Palumba",
   "@@OnBoardingPage": "OnBoardingPage",
@@ -29,52 +29,52 @@
   "germany": "Alemanha",
   "spain": "Espanha",
   "france": "França",
-  "poland": "Polônia",
-  "romania": "Romênia",
+  "poland": "Polónia",
+  "romania": "Roménia",
   "sweden": "Suécia",
-  "onBoardingStep1Title": "Onde vai votar?",
+  "onBoardingStep1Title": "Onde vais votar?",
   "onBoardingStep1Subtitle": "Eu não sei",
-  "onBoardingStep2Title": "Minha idade",
-  "onBoardingStep3Title": "Eu me identifico como",
+  "onBoardingStep2Title": "A minha idade",
+  "onBoardingStep3Title": "Eu identifico-me como",
   "onBoardingStep3Option1": "Mulher",
   "onBoardingStep3Option2": "Homem",
-  "onBoardingStep3Option3": "Gênero-fluido",
+  "onBoardingStep3Option3": "Género fluído",
   "onBoardingStep3Option4": "Não-binário",
   "onBoardingStep3Option5": "Outro",
   "onBoardingNotAnswerButton": "Prefiro não dizer",
-  "onBoardingCardQuestion": "Não faço ideia de quem votar para as eleições europeias de 2024",
-  "onBoardingLastStepTitle": "Deslize conforme o seu acordo",
+  "onBoardingCardQuestion": "Não faço ideia em quem votar para as eleições europeias de 2024",
+  "onBoardingLastStepTitle": "Desliza conforme estejas de acordo",
   "@@LoadingResultsPage": "LoadingResultsPage",
-  "loadingResultsPageTitle1": "Os seus resultados personalizados estão a caminho :)",
-  "loadingResultsPageTitle2": "Isto será mais rápido que conseguir ingressos para Taylor Swift 👀",
-  "loadingResultsPageTitle3": "Encontrando matches com as listas de candidatos na/no {country} 🔍",
+  "loadingResultsPageTitle1": "Os teus resultados personalizados estão a caminho :)",
+  "loadingResultsPageTitle2": "Isto será mais rápido do que conseguir bilhetes para Taylor Swift 👀 ",
+  "loadingResultsPageTitle3": "A encontrar matches com as listas de candidatos na/no {country} 🔍",
   "loadingResultsPageTitle4": "Quase pronto, uma última verificação...",
   "@@ResultsPage": "ResultsPage",
   "resultsPage1Title": "Um match e muito mais 👉👈",
-  "resultsPage1Text": "Nos ecrãs seguintes, você descobrirá o seu grupo mais compatível no Parlamento da UE, as listas locais correspondentes para votar em junho no seu país, e até encontramos algumas coisas extras com base nas suas respostas 😌",
-  "resultsPage1Button": "Pressione para continuar",
+  "resultsPage1Text": "Nas seguintes páginas, descobrirás o grupo que é mais compatível contigo no Parlamento da UE, as listas locais correspondentes para votar em junho no teu país, e até encontrámos algumas coisas extras com base nas tuas respostas 😌",
+  "resultsPage1Button": "Pressiona para continuar",
   "resultsPage2_1Title": "Honestamente, entre o(a)",
   "resultsPage2_2Title": "e eu, é como uma Love Story (EU's Version)",
-  "resultsPage3Title": "Quão perto estou dos grupos do Parlamento Europeu",
+  "resultsPage3Title": "O quão perto estou dos grupos do Parlamento Europeu",
   "resultsPage4TitleTop": "Pró-Integração UE",
   "resultsPage4TitleBottom": "Contra Integração UE",
   "resultsPage4TitleLeft": "Esquerda",
   "resultsPage4TitleRight": "Direita",
-  "resultsPage4TitleUserHere": "It's me, hi!",
-  "resultsPage5Title": "Quanto a temas mais específicos, qual é o grupo do Parlamento Europeu que eu estou mais próximo?",
+  "resultsPage4TitleUserHere": "Olá, sou eu!",
+  "resultsPage5Title": "Quanto a temas mais específicos, qual é o grupo do Parlamento Europeu ao qual estou mais próximo?",
   "resultsPage5Topic1": "Questões ambientais",
   "resultsPage5Topic2": "Direitos Humanos e Sociais",
-  "resultsPage5Topic3": "Intervenção econômica",
-  "resultsPage6_1Title": "Ok, é legal saber qual grupo me traz...",
+  "resultsPage5Topic3": "Intervenção económica",
+  "resultsPage6_1Title": "Ok, é fixe saber qual é o grupo que me traz...",
   "resultsPage6_2Title": "Mas nas eleições europeias, nós votamos numa lista local",
-  "resultsPage6Text": "Nos ecrãs seguintes, você vai descobrir a lista de candidatos do seu país que provavelmente estarão entre os seus matches.",
+  "resultsPage6Text": "Nas páginas seguintes, vais descobrir a lista de candidatos do teu país que provavelmente estarão entre os teus matches.",
   "resultsPage7Title": "Os candidatos em {country} mais alinhados com {group}",
   "resultsPage7Disclaimer": "Em nenhuma ordem específica.",
   "resultsPage7NoLocalCandidates": "Nenhum partido local encontrado em {country}",
-  "resultsPage8_1Text": "Em {topic}, você está com {percentage}% a mais",
-  "resultsPage8_2Text": "Ação Climática ativa 🌱😌",
-  "resultsPage8Help": "Você é um combatente das mudanças climáticas! Você acredita que a resolução da crise climática exige uma acção colectiva, com todos a torná-la uma prioridade absoluta. Você não se importa com a UE regulando as empresas nesse sentido. Pois, de que serve o crescimento econômico se o planeta se tornar inabitável?",
-  "resultsPage9Help": "Clique nos cartões para embaralhar",
+  "resultsPage8_1Text": "Em {topic}, tu estás com {percentage}% a mais",
+  "resultsPage8_2Text": "Ação Climática Ativa 🌱😌",
+  "resultsPage8Help": "Tu és um lutador pela mudança climática! Acreditas que a resolução da crise climática exige uma ação coletiva, e que todos a devem tornar uma prioridade absoluta. Não te importas que a UE regule as empresas nesse sentido. Porque, de que serve o crescimento económico se o planeta se tornar inabitável?",
+  "resultsPage9Help": "Clique nos cartões para baralhar",
   "resultsPage9Text1": "Eleições são sobre vários tópicos, mas há uma coisa que realmente",
   "resultsPage9Text2": "Belongs With Me 😌",
   "resultsPage10Title": "Uma notificação para quando for a hora de votar?",
@@ -84,23 +84,23 @@
   "@HomePage": "HomePage",
   "homePageMatchesFoundQuote": "{count} matches encontrados nas últimas 24h",
   "homePageBackToTest": "Voltar ao teste",
-  "homePageMyResults": "Meus resultados",
+  "homePageMyResults": "O meus resultados",
   "homePageStartButton": "Iniciar um novo teste",
   "@@SettingsPage": "SettingsPage",
   "settingsPageTitleLanguage": "Idioma",
-  "settingsPageSubtitleLanguage": "Eu prefiro usar este app em",
-  "settingsPageTextLanguage": "Para alterar o idioma, clique no atual",
+  "settingsPageSubtitleLanguage": "Eu prefiro usar esta app em",
+  "settingsPageTextLanguage": "Para alterar o idioma, clica no atual",
   "settingsPageTitleAbout": "Sobre",
-  "settingsPageTextAbout": "Palumba não é uma empresa, nem um partido político, nem um governo. Somos uma associação independente sem fins lucrativos de mais de 120 jovens 🐦 de toda a Europa que se reuniram no verão passado e começaram a desenvolver esse aplicativo. Temos um objetivo: ajudá-lo a compreender melhor o funcionamento das eleições europeias e quais as listas de candidatos que poderiam corresponder às suas ideias, para que você possa votar com mais confiança nas pessoas que apoiam as suas prioridades. Nosso algoritmo é open-source, as declarações que você passa foram analisadas por cientistas políticos, e seus dados são criptografados de tal maneira que nós não temos como te identificar :)",
+  "settingsPageTextAbout": "Palumba não é uma empresa, nem um partido político, nem um governo. Somos uma associação independente sem fins lucrativos de mais de 120 jovens 🐦 de toda a Europa que se reuniram no verão passado e começaram a desenvolver esta app. Temos um objetivo: ajudá-lo a compreender melhor o funcionamento das eleições europeias e quais as listas de candidatos que poderiam corresponder às tuas ideias, para que possas votar com mais confiança nas pessoas que apoiam as tuas prioridades. O nosso algoritmo é open-source, as declarações que tu fazes foram analisadas por cientistas políticos, e teus dados são criptografados de tal maneira que nós não temos como te identificar :)",
   "settingsPageTitleAssociation": "A associação",
   "settingsPageTitlePartners": "Parceiros",
-  "settingsPageTextPartners": "É importante dizer que os parceiros não têm poder editorial sobre o conteúdo do aplicativo, que continua a ser uma iniciativa não partidária com um objectivo claro: ajudá-los a compreender quem apoia as vossas opiniões a nível europeu e nacional.",
+  "settingsPageTextPartners": "É importante dizer que os parceiros não têm poder editorial sobre o conteúdo da app, que continua a ser uma iniciativa não partidária com um objetivo claro: ajudar-te a compreender quem apoia as tuas opiniões a nível europeu e nacional.",
   "settingsPageSubtitle1": "Principais Patrocinadores",
   "settingsPageSubtitle2": "Parceiros Europeus",
   "settingsPageSubtitle3": "Parceiro Acadêmico",
   "settingsPageSubtitle4": "Parceiros Institucionais nacionais",
   "settingsPageSubtitle5": "Prestadores de serviços",
-  "settingsPageShareButtonText": "Compartilhe",
+  "settingsPageShareButtonText": "Compartilha",
   "settingsPagePrivacyPolicy": "Política de Privacidade",
-  "settingsPageShareText": "Se esse pombinho fofo não puder ajudá-lo a votar em junho, nada irá. Eu usei esse aplicativo e você também deveria:"
+  "settingsPageShareText": "Se este pombinho fofo não puder ajudar-te a votar em junho, nada poderá. Eu usei esta app e tu também deverias usar:"
 }
