--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_sv-SE.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_sv-SE.arb
@@ -7,22 +7,22 @@
   "no": "Nej",
   "cancel": "Avbryt",
   "textContinue": "Fortsätt",
-  "alertServerErrorTitle": "Ops!",
+  "alertServerErrorTitle": "Oj!",
   "alertServerErrorText": "Ett fel har uppstått från vårt håll. Vänligen försök igen senare.",
   "skip": "Hoppa över",
   "neutral": "Neutral",
-  "faq": "FAQ",
+  "faq": "Vanliga frågor (FAQ)",
   "@@SplashPage": "SplashPage",
-  "splashPageNoInternet": "It looks like you don't have internet connection",
+  "splashPageNoInternet": "Det verkar som om du saknar internetanslutning",
   "@@LanguagePage": "LanguagePage",
   "languagePageTitle": "Fortsätt på svenska? :)",
-  "languagePageSubtitle": "This can be changed later in settings.",
+  "languagePageSubtitle": "Detta kan ändras senare i inställningar.",
   "@@Entrance": "EntrancePage",
-  "entranceTitle1": "If this cute pigeon can’t help you vote in June, nothing will.",
-  "entranceTitle2": "Swipe your opinion on topics that matter to you.",
-  "entranceTitle3": "Find out your match and an orientation for who to vote for at the Elections.",
-  "entranceMatchesFoundQuote": "{count} matches found in the last 24h",
-  "entranceStartButton": "Start Palumba",
+  "entranceTitle1": "Om denna söta duva inte kan hjälpa dig att rösta i juni, kan inget.",
+  "entranceTitle2": "Svajpa din åsikt om frågor som är viktiga för dig.",
+  "entranceTitle3": "Hitta din match och en orientering för vilka du kan rösta på vid valet.",
+  "entranceMatchesFoundQuote": "{count} matcher hittade de senaste 24 timmarna",
+  "entranceStartButton": "Starta Palumba",
   "@@OnBoardingPage": "OnBoardingPage",
   "hungary": "Ungern",
   "denmark": "Danmark",
@@ -34,73 +34,73 @@
   "sweden": "Sverige",
   "onBoardingStep1Title": "Var kommer du rösta?",
   "onBoardingStep1Subtitle": "Jag vet inte",
-  "onBoardingStep2Title": "My age",
-  "onBoardingStep3Title": "I identify as",
+  "onBoardingStep2Title": "Min ålder",
+  "onBoardingStep3Title": "Jag identifierar som",
   "onBoardingStep3Option1": "Kvinna",
   "onBoardingStep3Option2": "Man",
   "onBoardingStep3Option3": "Gender-fluid",
   "onBoardingStep3Option4": "Ickebinär",
-  "onBoardingStep3Option5": "Else",
-  "onBoardingNotAnswerButton": "Prefer not to say",
-  "onBoardingCardQuestion": "I have no clue who to vote for at the 2024 European Elections",
-  "onBoardingLastStepTitle": "Swipe according to your agreement",
+  "onBoardingStep3Option5": "Annat",
+  "onBoardingNotAnswerButton": "Föredrar att inte säga",
+  "onBoardingCardQuestion": "Jag har ingen aning om vem jag ska rösta på vid valet till Europaparlamentet 2024",
+  "onBoardingLastStepTitle": "Svajpa enligt hur mycket du instämmer",
   "@@LoadingResultsPage": "LoadingResultsPage",
-  "loadingResultsPageTitle1": "Your personalised results are on their way :)",
-  "loadingResultsPageTitle2": "This shall be quicker than getting Taylor Swift tickets 👀 ",
-  "loadingResultsPageTitle3": "Finding matches with candidates lists in {country}  🔍",
-  "loadingResultsPageTitle4": "Almost ready, one last check...",
+  "loadingResultsPageTitle1": "Dina personliga resultat är på väg :)",
+  "loadingResultsPageTitle2": "Detta kommer gå fortare än att skaffa biljetter till Taylor Swift 👀 ",
+  "loadingResultsPageTitle3": "Hittar matcher med kandidatlistor i {country}🔍",
+  "loadingResultsPageTitle4": "Nästan klart, en sista kontroll...",
   "@@ResultsPage": "ResultsPage",
-  "resultsPage1Title": "A match and much more 👉👈",
-  "resultsPage1Text": "In the next screens, you’ll discover your most compatible  Group at the EU Parliament, the matching Local lists to vote for in June in your country, and we even found a few extra things based on your answers 😌",
-  "resultsPage1Button": "Press to continue",
-  "resultsPage2_1Title": "Honestly, between the",
-  "resultsPage2_2Title": "and me, it’s kind of a Love Story (EU’s Version)",
-  "resultsPage3Title": "How close I am to European Parliament Groups",
-  "resultsPage4TitleTop": "Pro-EU Integration",
-  "resultsPage4TitleBottom": "Anti-EU Integration",
-  "resultsPage4TitleLeft": "Left",
-  "resultsPage4TitleRight": "Right",
+  "resultsPage1Title": "En match och mycket mer 👉👈",
+  "resultsPage1Text": "På de följande sidorna kommer du att upptäcka din mest kompatibla partigrupp i Europaparlamentet, de matchande lokala kandidatlistorna att rösta på i juni i ditt land, och vi hittade även ett par extra saker baserat på dina svar 😌",
+  "resultsPage1Button": "Tryck för att fortsätta",
+  "resultsPage2_1Title": "Ärligt talat, mellan",
+  "resultsPage2_2Title": "och mig, är det typ en Love Story (EU’s Version)",
+  "resultsPage3Title": "Hur nära jag står partigrupperna i Europaparlamentet",
+  "resultsPage4TitleTop": "För EU-Integration",
+  "resultsPage4TitleBottom": "Mot EU-Integration",
+  "resultsPage4TitleLeft": "Vänster",
+  "resultsPage4TitleRight": "Höger",
   "resultsPage4TitleUserHere": "It’s me, hi!",
-  "resultsPage5Title": "On more specific topics, which European Parliament Group am I closer to?",
-  "resultsPage5Topic1": "Environmental issues",
-  "resultsPage5Topic2": "Human & Social Rights",
-  "resultsPage5Topic3": "Economic intervention",
-  "resultsPage6_1Title": "Ok, it's cool knowing which group gets me...",
-  "resultsPage6_2Title": "But at the EU Elections, we vote for a local list",
-  "resultsPage6Text": "In the next screens, you’ll discover the candidate lists in your country  that are most likely to join your match.",
-  "resultsPage7Title": "The candidates in {country} most aligned with {group}",
-  "resultsPage7Disclaimer": "In no particular order.",
-  "resultsPage7NoLocalCandidates": "No local parties found in {country}",
-  "resultsPage8_1Text": "On {topic}, you’re {percentage}% more into",
-  "resultsPage8_2Text": "Active Climate Action 🌱😌",
-  "resultsPage8Help": "You are a climate change fighter! You believe that tackling the climate crisis requires collective action, with everyone making it a top priority. You do not mind the EU regulating companies to that end. After all, what use is economic growth if the planet becomes inhabitable?",
-  "resultsPage9Help": "Click on the cards to shuffle",
-  "resultsPage9Text1": "Elections are about many topics, but there’s one thing that really",
+  "resultsPage5Title": "När det gäller mer specifika frågor, vilken av Europaparlamentets partigrupper står jag närmast?",
+  "resultsPage5Topic1": "Miljöfrågor",
+  "resultsPage5Topic2": "Mänskliga & Sociala Rättigheter",
+  "resultsPage5Topic3": "Ekonomisk Intervention",
+  "resultsPage6_1Title": "Okej, coolt att veta vilken grupp som fattar mig...",
+  "resultsPage6_2Title": "Men vid EU-valet röstar vi på en lokal kandidatlista",
+  "resultsPage6Text": "På följande sidor kommer du hitta listorna på kandidaterna i ditt land mest troliga att ingå i din match.",
+  "resultsPage7Title": "Kandidaterna i {country} mest i linje med {group}",
+  "resultsPage7Disclaimer": "I ingen speciell ordning.",
+  "resultsPage7NoLocalCandidates": "Inga lokala partier hittades i {country}",
+  "resultsPage8_1Text": "Angående {topic}, är du {percentage}% mer intresserad av",
+  "resultsPage8_2Text": "Aktiva Klimatåtgärder 🌱😌",
+  "resultsPage8Help": "Du är en klimatkämpe! Du anser att det krävs kollektiva åtgärder för att ta itu med klimatkrisen, där alla gör det till en hög prioritet. Du har inget emot att EU reglerar företag i detta syfte. När allt kommer omkring, vilken nytta har vi den ekonomiska tillväxten om planeten blir obeboelig?",
+  "resultsPage9Help": "Klicka på korten för att blanda",
+  "resultsPage9Text1": "Val handlar om många frågor, men det finns en sak som verkligen",
   "resultsPage9Text2": "Belongs With Me 😌",
-  "resultsPage10Title": "A notification when it’s time to go vote?",
-  "resultsPage10NopButton": "No thanks!",
-  "resultsPage10YesButton": "Yesssss",
-  "resultsShare": "Share",
+  "resultsPage10Title": "En notifikation när det är dags att rösta?",
+  "resultsPage10NopButton": "Nej tack!",
+  "resultsPage10YesButton": "Jaaaaaa",
+  "resultsShare": "Dela",
   "@HomePage": "HomePage",
-  "homePageMatchesFoundQuote": "{count} matches found in the last 24h",
-  "homePageBackToTest": "Back to the test",
-  "homePageMyResults": "My results",
-  "homePageStartButton": "Start a new test",
+  "homePageMatchesFoundQuote": "{count} matcher hittade de senaste 24 timmarna",
+  "homePageBackToTest": "Tillbaka till testet",
+  "homePageMyResults": "Mina resultat",
+  "homePageStartButton": "Starta ett nytt test",
   "@@SettingsPage": "SettingsPage",
-  "settingsPageTitleLanguage": "Language",
-  "settingsPageSubtitleLanguage": "I prefer to use this app in",
-  "settingsPageTextLanguage": "To change the language, click on the current one",
-  "settingsPageTitleAbout": "About",
-  "settingsPageTextAbout": "Palumba is not a company, not a political party, not a government. We’re an independent non-profit association of 120+ young people 🐦 from all over Europe who got together last summer and started crafting this app. We have one goal: helping you understand better how the European Elections work and which candidate lists could match your ideas, so you can vote more confidently for people who support your priorities. Our algorithm is open-source, the statements you swipe on were reviewed by political scientists, and your data is sooo encrypted that we have no way to ever identify you :)",
-  "settingsPageTitleAssociation": "The association",
-  "settingsPageTitlePartners": "Partners",
-  "settingsPageTextPartners": "Important to tell you that partners have no editorial power on the content of the app, which remains a non-partisan initiative with a clear goal: helping you understand who supports your opinions at the european and national levels.",
-  "settingsPageSubtitle1": "Main Sponsors",
-  "settingsPageSubtitle2": "European Partners",
-  "settingsPageSubtitle3": "Academic Partner",
-  "settingsPageSubtitle4": "National Institutional Partners",
-  "settingsPageSubtitle5": "Service Providers",
-  "settingsPageShareButtonText": "Share",
-  "settingsPagePrivacyPolicy": "Data Protection",
-  "settingsPageShareText": "If this cute pigeon can't help you vote in June, nothing will. I've used the app and you should too:"
+  "settingsPageTitleLanguage": "Språk",
+  "settingsPageSubtitleLanguage": "Jag föredrar att använda denna app på",
+  "settingsPageTextLanguage": "För att ändra språk, klicka på det nuvarande",
+  "settingsPageTitleAbout": "Om oss",
+  "settingsPageTextAbout": "Palumba är inte ett företeg, inte ett politiskt parti och inte en regering. Vi är en oberoende ideell förening bestående av 120+ unga människor 🐦 från hela europa som slöt sig samman förra sommaren och påbörjade skapandet av denna app. Vi har ett mål: att hjälpa dig bättre förstå hur Europavalet fungerar och vilka kandidatlistor matchar dina idéer, så att du med mer förtroende kan rösta för människor som stöttar dina prioriteringar. Vår algoritm är open-source, påståendena du svajpar på är granskade av statsvetare, och din data är sååå krypterad att vi inte har något sätt att någonsin identifiera dig :)",
+  "settingsPageTitleAssociation": "Föreningen",
+  "settingsPageTitlePartners": "Samarbetspartner",
+  "settingsPageTextPartners": "Det är viktigt att vi berättar för dig att våra partner inte har någon redaktionell makt över innehållet i appen, som är och förblir ett opartiskt initiativ med ett tydligt mål: att hjälpa dig att förstå vem som stöder dina åsikter på europeisk och nationell nivå.",
+  "settingsPageSubtitle1": "Huvudsponsorer",
+  "settingsPageSubtitle2": "Europeiska partner",
+  "settingsPageSubtitle3": "Akademiska partner",
+  "settingsPageSubtitle4": "Nationella institutionella partner",
+  "settingsPageSubtitle5": "Tjänsteleverantörer",
+  "settingsPageShareButtonText": "Dela",
+  "settingsPagePrivacyPolicy": "Integritetspolicy",
+  "settingsPageShareText": "Om denna söta duva inte kan hjälpa dig att rösta i juni, kan inget. Jag har använt appen och det borde du också:"
 }
