--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_es-ES.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_es-ES.arb
@@ -7,7 +7,7 @@
   "no": "No",
   "cancel": "Cancelar",
   "textContinue": "Continuar",
-  "alertServerErrorTitle": "Ups!",
+  "alertServerErrorTitle": "¡Ups!",
   "alertServerErrorText": "Algo ha ido mal. Inténtalo otra vez más tarde, por favor.",
   "skip": "Saltar",
   "neutral": "Neutral",
@@ -51,7 +51,7 @@
   "loadingResultsPageTitle4": "Casi estamos, una última comprobación...",
   "@@ResultsPage": "ResultsPage",
   "resultsPage1Title": "Tienes un \"match\" y mucho más 👉👈",
-  "resultsPage1Text": "A continuación te mostraremos el grupo parlamentario de la UE que es más compatible contigo y las listas de candidatos nacionales en línea con ellos para que puedas votarlas en junio en tu país. También te explicamos alguna que otra cosa más según lo que has respondido 😌",
+  "resultsPage1Text": "A continuación te mostramos el grupo parlamentario de la UE que es más compatible contigo y las listas de candidatos nacionales en línea con él. Así podrás votarlas en junio en tu país. También te explicamos alguna que otra cosa más según lo que has respondido 😌",
   "resultsPage1Button": "Continuar",
   "resultsPage2_1Title": "A decir verdad, entre el",
   "resultsPage2_2Title": "y tú hay como una verdadera Love Story (EU’s Version)",
@@ -102,5 +102,5 @@
   "settingsPageSubtitle5": "Proveedores de servicios",
   "settingsPageShareButtonText": "Compartir",
   "settingsPagePrivacyPolicy": "Política de privacidad",
-  "settingsPageShareText": "If this cute pigeon can't help you vote in June, nothing will. I've used the app and you should too:"
+  "settingsPageShareText": "Si esta palomita no te ayuda a votar en junio, nada podrá. He usado la app y te la recomiendo:"
 }
