--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_hr.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_hr.arb
@@ -102,5 +102,5 @@
   "settingsPageSubtitle5": "Pružatelji usluga",
   "settingsPageShareButtonText": "Podijeli",
   "settingsPagePrivacyPolicy": "Zaštita podataka",
-  "settingsPageShareText": "If this cute pigeon can't help you vote in June, nothing will. I've used the app and you should too:"
+  "settingsPageShareText": "Ako ti ni ovaj slatki golub ne može pomoći da glasaš u lipnju, onda ništa neće. Ja sam koristio ovu aplikaciju, to znači da moraš i ti:"
 }
