--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_it.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_it.arb
@@ -21,7 +21,7 @@
   "entranceTitle1": "Se questo piccione carino non ti aiuterà a votare a giugno, nient'altro lo farà.",
   "entranceTitle2": "Scorri sull'opinione che più ti interessa.",
   "entranceTitle3": "Trova il tuo abbinamento e l'orientamento per cui votare alle elezioni.",
-  "entranceMatchesFoundQuote": "{count} abbinamenti trovati nelle ultime 24 ore",
+  "entranceMatchesFoundQuote": "{count} match trovati nelle ultime 24 ore",
   "entranceStartButton": "Avvia Palumba",
   "@@OnBoardingPage": "OnBoardingPage",
   "hungary": "Ungheria",
@@ -53,7 +53,7 @@
   "resultsPage1Title": "Un match e tanto altro 👉👈",
   "resultsPage1Text": "Nelle prossime schermate, scoprirai il gruppo del Parlamento Europeo con cui sei più compatibile, le liste locali da votare a giugno nel tuo paese e abbiamo anche trovato un paio di cose extra in base alle tue risposte  😌",
   "resultsPage1Button": "Premi per continuare",
-  "resultsPage2_1Title": "Onestamente, tra il",
+  "resultsPage2_1Title": "Onestamente, tra",
   "resultsPage2_2Title": "e me, è una Love Story (EU's Version)",
   "resultsPage3Title": "Quanto mi sono vicini i Gruppi Parlamentari Europei",
   "resultsPage4TitleTop": "Pro Integrazione UE",
@@ -71,7 +71,7 @@
   "resultsPage7Title": "I candidati in {country} più allineati con {group}",
   "resultsPage7Disclaimer": "Non in un ordine particolare.",
   "resultsPage7NoLocalCandidates": "Nessun partito trovato in {country}",
-  "resultsPage8_1Text": "Su {topic}, sei {percentage} in più in",
+  "resultsPage8_1Text": "Su {topic}, sei {percentage}% più incline in",
   "resultsPage8_2Text": "Azione Climatica Attiva",
   "resultsPage8Help": "Sei un* combattente per il cambiamento climatico! Credi che combattere la crisi climatica necessiti un'azione collettiva, che tutti ne facciano una priorità assoluta. Non ti importa che l'UE regoli le aziende fino in fondo. Alla fine, a cosa serve la crescita economica se il pianeta diventa inabitabile?",
   "resultsPage9Help": "Clicca sulle carte per mescolare",
