Update UI translations

--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_bg.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_bg.arb
@@ -71,7 +71,7 @@
   "resultsPage7Title": "Кандидатите в{country}, които най-много се придържат към {group}",
   "resultsPage7Disclaimer": "Без определен ред.",
   "resultsPage7NoLocalCandidates": "Не са намерени местни партии в {country}",
-  "resultsPage8_1Text": "На {topic} вие сте {percentage} повече към",
+  "resultsPage8_1Text": "На {topic} вие сте {percentage}% повече към",
   "resultsPage8_2Text": "Активни действия по отношение на климата",
   "resultsPage8Help": "Вие сте борец срещу климатичните проблеми! Вярвате, че справянето с кризата с климата изисква колективни действия, които да се превърнат в основен приоритет за всички. Нямате нищо против ЕС да регулира компаниите за тази цел. В края на краищата, каква е ползата от икономическия растеж, ако планетата стане необитаема?",
   "resultsPage9Help": "Кликнете върху картите, за да ги разбъркате",
