--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_cs.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_cs.arb
@@ -15,7 +15,7 @@
   "@@SplashPage": "SplashPage",
   "splashPageNoInternet": "Vypadá to, že nejste připojeni k internetu",
   "@@LanguagePage": "LanguagePage",
-  "languagePageTitle": "Pokračujme v anglickém jazyce :)",
+  "languagePageTitle": "Pokračovat v češtině? :)",
   "languagePageSubtitle": "Toto lze změnit později v sekci Nastavení.",
   "@@Entrance": "EntrancePage",
   "entranceTitle1": "Pokud vám tento roztomilý holub nepomůže v červnu volit, nepomůže vám nic.",
@@ -71,7 +71,7 @@
   "resultsPage7Title": "Kandidáti v {country} mají nejblíže ke {group}",
   "resultsPage7Disclaimer": "Bez konkrétního pořadí.",
   "resultsPage7NoLocalCandidates": "V {country} jsme nenalezli žádné místní strany",
-  "resultsPage8_1Text": "V {topic}, se z {percentage} % shodujete v",
+  "resultsPage8_1Text": "V {topic}, se z {percentage}% shodujete v",
   "resultsPage8_2Text": "Aktivní opatření v oblasti klimatu 🌱😌",
   "resultsPage8Help": "Jste bojovníkem za změnu klimatu! Věříte, že boj proti klimatické krizi vyžaduje kolektivní přístup, přičemž z něj každý učiní svou hlavní prioritu. Nevadí vám regulace společností ze strany EU. Vždyť jaký užitek má hospodářský růst ve chvíli, kdy se planeta stane neobyvatelnou?",
   "resultsPage9Help": "Pro zamíchání klikněte na karty",
