--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_fr.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_fr.arb
@@ -71,7 +71,7 @@
   "resultsPage7Title": "Les listes en {country} les plus alignées avec {group}",
   "resultsPage7Disclaimer": "Dans aucun ordre particulier.",
   "resultsPage7NoLocalCandidates": "Aucune liste locale trouvée en {country}",
-  "resultsPage8_1Text": "Sur {topic}, tu es {percentage}% plus pour",
+  "resultsPage8_1Text": "Sur {topic}, tu es à {percentage}% plus pour",
   "resultsPage8_2Text": "Action climatique 🌱😌",
   "resultsPage8Help": "Tu es un combattant pour le climat ! Tu crois que pour lutter contre la crise climatique il faut une action collective et que chacun doit en faire sa grande priorité. Tu es favorable au fait que l'Union Européenne régule les entreprises pour aider dans cet objectif. Après tout, à quoi ça sert d'avoir de la \"croissance\" économique si la planète deviens invivable ?",
   "resultsPage9Help": "Appuie sur la carte pour en voir d'autres",
