--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_hr.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_hr.arb
@@ -71,7 +71,7 @@
   "resultsPage7Title": "Kandidati u {country} najviše se podudaraju s {group}",
   "resultsPage7Disclaimer": "Bez određenog redoslijeda.",
   "resultsPage7NoLocalCandidates": "Nije pronađena niti jedna lokalna skupina u {country}",
-  "resultsPage8_1Text": "Što se tiče {topic}, {percentage} si više za",
+  "resultsPage8_1Text": "Što se tiče {topic}, {percentage}% si više za",
   "resultsPage8_2Text": "Aktivno klimatsko djelovanje🌱😌",
   "resultsPage8Help": "Pravi si borac protiv klimatskih promjena! Vjeruješ da klimatska kriza mora biti prioritet svakoga i da njezino suzbijanje zahtjeva udružene napore. Nemaš ništa protiv da EU regulira poduzeća u tu svrhu. Uostalom, kakva je korist od ekonomskog rasta ako planet postane nenastanjiv?",
   "resultsPage9Help": "Stisni na karte kako bi se promiješale",
