--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_ro.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_ro.arb
@@ -15,7 +15,7 @@
   "@@SplashPage": "SplashPage",
   "splashPageNoInternet": "Se pare că nu ești conectat/ă la internet",
   "@@LanguagePage": "LanguagePage",
-  "languagePageTitle": "Continuăm în engleză? :)",
+  "languagePageTitle": "Continuăm în română? :)",
   "languagePageSubtitle": "Acest lucru poate fi schimbat mai târziu în setări.",
   "@@Entrance": "EntrancePage",
   "entranceTitle1": "Dacă acest porumbel drăguț nu te poate ajuta să votezi în iunie, nimic nu te poate ajuta.",
@@ -71,7 +71,7 @@
   "resultsPage7Title": "Candidații în {country} se aliniază cel mai mult cu {group}",
   "resultsPage7Disclaimer": "În nicio ordine specială.",
   "resultsPage7NoLocalCandidates": "Nu au fost găsite partide locale în {country}",
-  "resultsPage8_1Text": "Pe {topic}, ești mai degrabă {percentage}",
+  "resultsPage8_1Text": "Pe {topic}, ești mai degrabă {percentage}%",
   "resultsPage8_2Text": "Politici pentru Mediu Proactive 🌱😌",
   "resultsPage8Help": "Ești o persoană care vrea să lupte împotriva schimbării climatice! Crezi că lupta cu schimbarea climatică necesită acțiuni la nivel de colectiv, unde toți recunoaștem că schimbarea climatică este o prioritate urgentă. Ești de acord ca UE să reglementeze companiile private în acest scop. Toate ca toate, dar care este scopul creșterii economice dacă planeta devine de nelocuit?",
   "resultsPage9Help": "Apasă pe cărți pentru a le amesteca",
