--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_sk.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_sk.arb
@@ -15,7 +15,7 @@
   "@@SplashPage": "SplashPage",
   "splashPageNoInternet": "Vyzerá to, že nemáte pripojenie na internet",
   "@@LanguagePage": "LanguagePage",
-  "languagePageTitle": "Pokračujme v angličtine? :)",
+  "languagePageTitle": "Pokračujme v slovenčina? :)",
   "languagePageSubtitle": "Túto možnosť môžete neskôr zmeniť v nastaveniach.",
   "@@Entrance": "EntrancePage",
   "entranceTitle1": "Ak vám tento roztomilý holub nepomôže v júni voliť, tak už nič.",
@@ -71,7 +71,7 @@
   "resultsPage7Title": "Kandidáti na {country}, ktorí sú najviac v súlade s {group}",
   "resultsPage7Disclaimer": "Bez určenia poradia.",
   "resultsPage7NoLocalCandidates": "Žiadne miestne strany sa na {country} nenašli",
-  "resultsPage8_1Text": "V téme {topic} si na {percentage} viac do",
+  "resultsPage8_1Text": "V téme {topic} si na {percentage}% viac do",
   "resultsPage8_2Text": "Aktívne opatrenia v oblasti klímy 🌱😌",
   "resultsPage8Help": "Ste bojovníkom proti klimatickým zmenám! Veríte, že boj proti klimatickej kríze si vyžaduje kolektívny prístup, ktorý by mal byť prioritou pre každého. Nevadí vám regulácia podnikov zo strany EÚ. Veď načo je hospodársky rast, keď sa planéta stane neobývateľnou?",
   "resultsPage9Help": "Pre zamiešanie kliknite na karty",
